--- a/css/style.css
+++ b/css/style.css
@@ -380,6 +380,12 @@ fieldset {
   border-radius: 4px;
 }
 
+.pristine-error {
+  font-family: "Roboto", "Arial", sans-serif;
+  font-size: 18px;
+  color: red;
+}
+
 .ad-form__element input:hover,
 .ad-form__element select:hover,
 .ad-form__element textarea:hover {
